# OpenHAM

./: .gitignore  AUTHORS  CMakeLists.txt  OpenHAMSession.pro  README.md
.github/workflows/: ubuntu-24.04-build-and-test.yml  windows_vc2019_x64.yml
OpenHAMSolver/: CMakeLists.txt
OpenHAMSolver/doc/: Layout.xml  OpenHAMSolver.doxy
OpenHAMSolver/doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html
OpenHAMSolver/projects/Qt/: .gitignore  OpenHAMSolver.pro
OpenHAMSolver/projects/cmake/: CMakeLists.txt
OpenHAMSolver/src/: BandMatrix.cpp  BandMatrix.h  Directories.cpp  Directories.h  Integrator.cpp  Integrator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenHAMArgParser.cpp  OpenHAMArgParser.h  OpenHamArgParser.cpp  OpenHamArgParser.h  Outputs.cpp  Outputs.h  SolverFeedback.cpp  SolverFeedback.h  main.cpp
data/examples/response_test/: response_test_with_builtin_materials.d6p
data/examples/sandwich_wall/: .gitignore  readme.md  sandwich_ICT.d6p
data/examples/steady_state/: steady_state.d6p
data/tests/: Blubb.bla  HB4.OpenHAM  HB4_VergleichLoesungsvariablen_DeltaNorm.p2  HB4_VergleichLoesungsvariablen_ResNorm.p2  Te.ccd  rain.ccd  testresults.p2
data/tests/EN15026/: EN15026-2007.d6p
data/tests/boundary_conditions/: .gitignore  HamstadBenchmark4.d6p  HamstadBenchmark4_D6_ref.d6p  HamstadBenchmark4_with_builtin_materials.d6p  response_test.d6p  (+4 more)
data/validation/: validation.p2
release/linux/: .gitignore  create_release.sh
release/mac/: create_release.sh
release/windows/: .gitignore  create_release.bat
scripts/TestSuite/: run_tests.py
(+96 files in other folders)
